# weather-cli

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_import.py  weather_history.json
src/: weather.py
tests/: conftest.py  test_weather.py
